# pyharness

./: .dockerignore  .gitignore  .gitlab-ci.yml  AGENT_LOG.md  Dockerfile  PLAN.md  README.md  REFLECTION.md  SPEC.md  SPEC_PROCESS.md  VERIFICATION.md  pyproject.toml  render.yaml  verify.bat  verify.sh
.github/workflows/: test.yml
src/pyharness/: config.py  context.py  credential.py  feedback.py  hitl.py  llm.py  loop.py  main.py  memory.py  models.py  parser.py  tools.py
src/pyharness/guardrail/: approval_guard.py  base.py  chain.py  rule_guard.py  scope_guard.py
src/pyharness/webui/: server.py
src/pyharness/webui/static/: app.js  index.html  style.css
tests/: test_config.py  test_context.py  test_credential.py  test_demo.py  test_feedback.py  test_hitl.py  test_llm.py  test_loop.py  test_memory.py  test_models.py  test_parser.py  test_tools.py  test_webui.py
tests/test_guardrail/: test_approval_guard.py  test_base.py  test_chain.py  test_rule_guard.py  test_scope_guard.py
