[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "pyharness"
version = "0.1.0"
description = "Coding Agent Harness - AI4SE Final Project"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.39.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "keyring>=25.0.0",
    "pyyaml>=6.0",
    "websockets>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
]

[tool.setuptools.packages.find]
where = ["src"]